Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.1.8, 10.1.14
-
Fix Version/s: 10.1.15
-
Component/s: Galera, Galera SST
-
Labels:None
-
Environment:Linux, Ubuntu 14.04 CentOS 7
Description
SST under load with mysqldump method fails:
2016-05-11 16:12:52 140267078974208 [ERROR] WSREP: Could not parse SST address : 192.168.1.199:3306
Seems to be introduced in 10.1.8:
https://fossies.org/diffs/mariadb/10.1.7_vs_10.1.8/sql/wsrep_sst.cc-diff.html
Attachments
Issue Links
- links to