MDEV-10056: SST method mysqldump is broken

errno must be reset before strtol()/strtoll() functions
are invoked.